@@ -1,4 +1,3 @@
 FireGPG Team <firegpg@gmail.com> including :
 	Achraf cherti
 	Maximilien Cuony
-
